--- a/left_stampi/manifest.json
+++ b/left_stampi/manifest.json
@@ -30,6 +30,13 @@
         "defaultValue": 42,
         "optional": "true",
         "description": "Seed for the random number generator"
+      },
+      {
+          "name": "use_column_index",
+          "type": "int",
+          "defaultValue": 0,
+          "optional": "true",
+          "description": "The column index to use as input for the univariate algorithm for multivariate datasets. The selected single channel of the multivariate time series is analyzed by the algorithms. The index is 0-based and does not include the index-column ('timestamp'). The single channel of an univariate dataset, therefore, has index 0."
       }
     ],
     "modelInput": "none"
