--- a/grammarviz3/Dockerfile
+++ b/grammarviz3/Dockerfile
@@ -7,7 +7,7 @@ COPY src src
 RUN mvn package -PsingleCLI -DskipTests
 
 
-FROM mut:5000/akita/java-base:0.2.3
+FROM registry.gitlab.hpi.de/akita/i/java-base:0.2.3
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
 
