--- a/donut/requirements.txt
+++ b/donut/requirements.txt
@@ -4,3 +4,4 @@ tensorflow==1.*
 git+https://github.com/thu-ml/zhusuan.git
 git+https://github.com/haowen-xu/tfsnippet.git@v0.1.2
 six
+protobuf==3.20.*
