feat(multi_subsequence_lof): add a multivariate version of subsequence_lof replacing the sum-specific variant

--- a/multi_subsequence_lof/manifest.json
+++ b/multi_subsequence_lof/manifest.json
@@ -1,9 +1,9 @@
 {
-    "title": "Subsequence LOF Multivariate Sum",
-    "description": "LOF on sliding windows to detect subsequence anomalies. Summes multiple dimensions to work on a single.",
+    "title": "Multi-Sub-LOF",
+    "description": "LOF on sliding windows of multivariate time series to detect subsequence anomalies.",
     "inputDimensionality": "multivariate",
     "version": "0.1",
-    "authors": "Niklas Köhnecke",
+    "authors": "Sebastian Schmidl, Niklas Köhnecke",
     "language": "Python",
     "type": "Detector",
     "mainFile": "algorithm.py",
@@ -37,6 +37,13 @@
                 "defaultValue": 2,
                 "optional": "true",
                 "description": "Parameter for the Minkowski metric from sklearn.metrics.pairwise.pairwise_distances. When p = 1, this is equivalent to using manhattan_distance (l1), and euclidean_distance (l2) for p = 2. For arbitrary p, minkowski_distance (l_p) is used. See http://scikit-learn.org/stable/modules/generated/sklearn.metrics.pairwise.pairwise_distances."
+            },
+            {
+                "name": "dim_aggregation_method",
+                "type": "enum[concat,sum]",
+                "defaultValue": "concat",
+                "optional": "true",
+                "description": "Method used to aggregate multiple dimensions, so that LOF can process the subsequence. When 'concat', the 2D-matrix is flattened into a 1D-vector; when 'sum' the 2D-matrix is aggregated over the channels to get a 1D sliding window."
             },
             {
                 "name": "n_jobs",
