WIP not tested draft of GDN integration

--- a/gdn/Dockerfile
+++ b/gdn/Dockerfile
@@ -10,3 +10,4 @@ RUN pip install -r /app/requirements.txt
 RUN pip install --no-index torch-scatter torch-sparse torch-cluster torch-spline-conv -f https://pytorch-geometric.com/whl/torch-1.5.0+cu102.html
 
 COPY algorithm.py /app/
+COPY GDN /app/GDN
