--- a/0-base-images/python3-torch/Dockerfile
+++ b/0-base-images/python3-torch/Dockerfile
@@ -1,5 +1,5 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base
+FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.6
 
 LABEL maintainer="phillip.wenig@hpi.de"
 
-RUN pip install --no-cache-dir torch==1.7.1
+RUN pip install --no-cache-dir torch==1.13.1
