refactor: split up base images and intermediate images; rename folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 results
 **/__pycache__/
-2-results
+!results/.gitkeep
 
 ########################################
 # JetBrains.gitignore from github/gitignore
