--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -1,7 +1,9 @@
-name: Test Pull Request
+name: Build images and test algorithms
 
 on:
   pull_request:
+    branches: main
+  push:
     branches: main
 
 defaults:
@@ -13,26 +15,130 @@ jobs:
     name: Generate Jobs
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.generate-jobs.outputs.matrix }}
+      base_matrix: ${{ steps.generate-jobs.outputs.base_matrix }}
+      intermediate_matrix: ${{ steps.generate-jobs.outputs.intermediate_matrix }}
+      algo_matrix: ${{ steps.generate-jobs.outputs.algo_matrix }}
     steps:
       - uses: actions/checkout@v4
       - id: generate-jobs
-        name: Generate Jobs for modified algorithms
+        name: Generate Jobs for modified base images or algorithms
         run: |
-          matrix="$(./.ci/generate-build-matrix.sh)"
-          echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
-          jq . <<<"$matrix" # print generated json for debugging
+          echo "base_matrix=$(./.ci/generate-build-matrix.sh 0-base-images)" >> "$GITHUB_OUTPUT"
+          echo "intermediate_matrix=$(./.ci/generate-build-matrix.sh 1-intermediate-images)" >> "$GITHUB_OUTPUT"
+          echo "algo_matrix=$(./.ci/generate-build-matrix.sh)" >> "$GITHUB_OUTPUT"
+          jq . <<<"$base_matrix" # print generated json for debugging
+          jq . <<<"$intermediate_matrix" # print generated json for debugging
+          jq . <<<"$algo_matrix" # print generated json for debugging
 
-  validate:
-    name: Test algorithms
+  build-base-images:
+    name: Build base images
     runs-on: ubuntu-latest
     needs: init
     permissions:
       contents: read
-      # packages: write  # just for pushing the image to the registry
+      packages: write
     strategy:
       max-parallel: 3
-      matrix: ${{ fromJson(needs.init.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.init.outputs.base_matrix) }}
+        # algorithm_name: ["python3-base", "java-base"]
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Compute Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ matrix.algorithm_name }}
+            ghcr.io/hpi-information-systems/${{ matrix.algorithm_name }}
+          tags: |
+            type=ref,event=branch
+            type=sha
+#            type=raw,${{ version }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build algorithm image
+        uses: docker/build-push-action@v5
+        with:
+          context: "./0-base-images/${{ matrix.algorithm_name }}"
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          pull: true
+          load: true
+          # push: ${{ github.event_name != 'pull_request' }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-intermediate-images:
+    name: Build intermediate images
+    runs-on: ubuntu-latest
+    needs:
+      - init
+      - build-base-images
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      max-parallel: 3
+      matrix: ${{ fromJson(needs.init.outputs.intermediate_matrix) }}
+        # algorithm_name: ["tsmp"]
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Compute Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ matrix.algorithm_name }}
+            ghcr.io/hpi-information-systems/${{ matrix.algorithm_name }}
+          tags: |
+            type=ref,event=branch
+            type=sha
+#            type=raw,${{ version }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build algorithm image
+        uses: docker/build-push-action@v5
+        with:
+          context: "./1-intermediate-images/${{ matrix.algorithm_name }}"
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          pull: true
+          load: true
+          # push: ${{ github.event_name != 'pull_request' }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  test-algorithms:
+    name: Test algorithms
+    runs-on: ubuntu-latest
+    needs:
+      - init
+      - build-base-images
+      - build-intermediate-images
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      max-parallel: 3
+      matrix: ${{ fromJson(needs.init.outputs.algo_matrix) }}
       # algorithm_name: ["subsequence_lof", "lof"]
       # or with multiple variables:
       # include:
@@ -55,21 +161,33 @@ jobs:
           dataset_name="$(python .ci/get_dataset_name.py ${{ matrix.algorithm_name }} > dataset_name.txt)"
           echo "${{ matrix.algorithm_name }}_dataset_name=$dataset_name" >> "$GITHUB_OUTPUT"
 
-      - name: Prepare build
-        run: mkdir results && chmod -R 777 results
+      - name: Compute Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ matrix.algorithm_name }}
+            ghcr.io/hpi-information-systems/${{ matrix.algorithm_name }}
+          tags: |
+            type=ref,event=branch
+            type=sha
+#            type=raw,${{ version }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build algorithm image
         uses: docker/build-push-action@v5
         with:
           context: "./${{ matrix.algorithm_name }}"
-          tags: "${{ matrix.algorithm_name }}:${{ github.sha }}"
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           pull: true
-          push: false
           load: true
+          push: false # TODO: push when tests are successfull!
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Prepare result folder
+        run: mkdir results && chmod -R 777 results
       - name: Test training call
         uses: addnab/docker-run-action@v3
         with:
@@ -82,7 +200,7 @@ jobs:
               "executionType": "train",
               "customParameters": {"epochs": 1}
             }'
-  
+
       - name: Test execution call
         uses: addnab/docker-run-action@v3
         with:
@@ -100,14 +218,29 @@ jobs:
         run: |
           ls -alh results/*
           python .ci/check_output.py "${{ matrix.algorithm_name }}"
-  
-# no deployment for PRs
-    # - name: Login to registry
+
+# deployment for non-PRs and if all checks are successfull:
+      # - name: Login to registry
       #   uses: docker/login-action@v4
+      #   if: github.event_name != 'pull_request'
       #   with:
       #     registry: ghcr.io
       #     username: ${{ github.actor }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Build and push algorithm image
+      #   uses: docker/build-push-action@v5
+      #   if: github.event_name != 'pull_request'
+      #   with:
+      #     context: "./${{ matrix.algorithm_name }}"
+      #     tags: |
+      #       ghcr.io/hpi-information-systems/"${{ matrix.algorithm_name }}:latest"
+      #       ghcr.io/hpi-information-systems/"${{ matrix.algorithm_name }}:0.0.0"
+      #     labels: ${{ steps.meta.outputs.labels }}
+      #     pull: true
+      #     load: true
+      #     push: true # TODO: push when tests are successfull!
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
 
 # GITHUB_EVENT_NAME=pull_request
 # GITHUB_BASE_REF=PR target branch (probably main)
