--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -42,6 +42,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    if: fromJson(needs.init.outputs.base_matrix).algorithm_name[0] != null
     strategy:
       max-parallel: 3
       matrix: ${{ fromJson(needs.init.outputs.base_matrix) }}
@@ -92,7 +93,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    if: fromJson(needs.init.outputs.intermediate_matrix).algorithm_name[0] != null
+    if: !cancelled() && fromJson(needs.init.outputs.intermediate_matrix).algorithm_name[0] != null
     strategy:
       max-parallel: 3
       matrix: ${{ fromJson(needs.init.outputs.intermediate_matrix) }}
@@ -144,6 +145,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    if: !cancelled() && fromJson(needs.init.outputs.algo_matrix).algorithm_name[0] != null
     strategy:
       max-parallel: 3
       matrix: ${{ fromJson(needs.init.outputs.algo_matrix) }}
