--- a/1-intermediate-images/timeeval-test-algorithm/Dockerfile
+++ b/1-intermediate-images/timeeval-test-algorithm/Dockerfile
@@ -1,7 +1,8 @@
-FROM ghcr.io/hpi-information-systems/python3-base:latest
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
 
 ENV ALGORITHM_MAIN=/app/algorithm.py
 
+COPY manifest.json /app/
 COPY algorithm.py /app/
