--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -27,7 +27,7 @@ jobs:
           echo "base_matrix=$base_matrix" >> "$GITHUB_OUTPUT"
           jq . <<<"$base_matrix" # print generated json for debugging
 
-          intermediate_matrix='{"algorithm_name": []}'
+          intermediate_matrix="$(./.ci/generate-build-matrix.sh 1-intermediate-images)"
           echo "intermediate_matrix=$intermediate_matrix" >> "$GITHUB_OUTPUT"
           jq . <<<"$intermediate_matrix" # print generated json for debugging
 
@@ -60,12 +60,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ${{ matrix.algorithm_name }}
-            ghcr.io/timeeval/${{ matrix.algorithm_name }}
+          images: ghcr.io/timeeval/${{ matrix.algorithm_name }}
           tags: |
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
+          labels: |
+            org.opencontainers.image.title=TimeEval algorithm {{ matrix.algorithm_name }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to registry
@@ -118,6 +118,8 @@ jobs:
           tags: |
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
+          labels: |
+            org.opencontainers.image.title=TimeEval algorithm {{ matrix.algorithm_name }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to registry
@@ -188,6 +190,8 @@ jobs:
           tags: |
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
+          labels: |
+            org.opencontainers.image.title=TimeEval algorithm {{ matrix.algorithm_name }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build algorithm image
@@ -238,10 +242,10 @@ jobs:
       # deployment for non-PRs and if all checks are successfull:
       - name: Login to registry
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v4
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push algorithm image
         if: github.event_name != 'pull_request'
