chore: restore lof and sublof algorithms and use kmeans; also add licenses to base images

--- a/0-base-images/python3-base/Dockerfile
+++ b/0-base-images/python3-base/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.7.9-slim-buster
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 RUN set -eux; \
     apt-get update; \
