--- a/1-intermediate-images/timeeval-test-algorithm/Dockerfile
+++ b/1-intermediate-images/timeeval-test-algorithm/Dockerfile
@@ -1,6 +1,7 @@
 FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN=/app/algorithm.py
 
