--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -65,7 +65,7 @@ jobs:
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
           labels: |
-            org.opencontainers.image.title=TimeEval algorithm {{ matrix.algorithm_name }}
+            org.opencontainers.image.title=TimeEval algorithm ${{ matrix.algorithm_name }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to registry
@@ -112,14 +112,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ${{ matrix.algorithm_name }}
-            ghcr.io/timeeval/${{ matrix.algorithm_name }}
+          images: ghcr.io/timeeval/${{ matrix.algorithm_name }}
           tags: |
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
           labels: |
-            org.opencontainers.image.title=TimeEval algorithm {{ matrix.algorithm_name }}
+            org.opencontainers.image.title=TimeEval algorithm ${{ matrix.algorithm_name }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to registry
@@ -172,7 +170,7 @@ jobs:
         run: python validate_manifest.py --path ${{ matrix.algorithm_name }}/manifest.json
       - name: Determine correct test dataset
         run: |
-          dataset_name="$(python .ci/get_dataset_name.py ${{ matrix.algorithm_name }} > dataset_name.txt)"
+          dataset_name="$(python .ci/get_dataset_name.py ${{ matrix.algorithm_name }})"
           echo "${{ matrix.algorithm_name }}_dataset_name=$dataset_name" >> "$GITHUB_OUTPUT"
 
       - name: Compute (and check) version
@@ -184,14 +182,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ${{ matrix.algorithm_name }}
-            ghcr.io/timeeval/${{ matrix.algorithm_name }}
+          images: ghcr.io/timeeval/${{ matrix.algorithm_name }}
           tags: |
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
           labels: |
-            org.opencontainers.image.title=TimeEval algorithm {{ matrix.algorithm_name }}
+            org.opencontainers.image.title=TimeEval algorithm ${{ matrix.algorithm_name }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build algorithm image
