feat: adjust r base image

--- a/0-base-images/r-base/Dockerfile
+++ b/0-base-images/r-base/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:buster-slim
 
 LABEL maintainer="sebastian.schmidl@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 RUN set -eux; \
     apt-get update; \
