--- a/kmeans/Dockerfile
+++ b/kmeans/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/timeeval/python3-base:0.3.0
+FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
 
 LABEL maintainer="phillip.wenig@hpi.de"
 
@@ -8,4 +8,5 @@ ENV ALGORITHM_MAIN="/app/algorithm.py"
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
-COPY . /app/
+COPY kmeans /app/kmeans
+COPY algorithm.py /app/
