--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -66,10 +66,11 @@ jobs:
           labels: |
             org.opencontainers.image.licenses=MIT
             org.opencontainers.image.title=TimeEval ${{ matrix.algorithm_name }} base image
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to registry
-        # if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -82,8 +83,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           pull: true
-          push: true
-          # push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -118,6 +118,7 @@ jobs:
           labels: |
             org.opencontainers.image.licenses=MIT
             org.opencontainers.image.title=TimeEval ${{ matrix.algorithm_name }} intermediate image
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to registry
@@ -180,6 +181,7 @@ jobs:
             type=raw,value=${{ steps.version.outputs.version }}
           labels: |
             org.opencontainers.image.title=TimeEval algorithm ${{ matrix.algorithm_name }}
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build algorithm image
