Build and host algorithm images on GitHub (base images) (#20)
* wip: first version of PR test workflow

* feat: adapt first algorithm to new infrastructure

* fix: job generation script

* feat: adapt second algorithm to new infrastructure

* fix: python version


* feat: allow matrix generation script to run in different contexts (folders)

* refactor: split up base images and intermediate images; rename folders

* feat: adjust workflow to build images in order

* fix: build matrix computation script

* test empty matrix

* feat: prepare image publishing and adapt docker images

* chore: restore lof and sublof algorithms and use kmeans; also add licenses to base images

* feat: adjust r base image

* chore: cleanup workflow definition

* refactor: revert changes to intermediate images and algos (later PR)

* feat: test image push

* feat: test image push again

* fix: image license information

* feat: fix version information in image labels and finish PR

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 results
 **/__pycache__/
+!results/.gitkeep
 
 ########################################
 # JetBrains.gitignore from github/gitignore
