feat: adapt kmeans algorithm for new CI workflow

--- a/kmeans/Dockerfile
+++ b/kmeans/Dockerfile
@@ -1,6 +1,7 @@
-FROM registry.gitlab.hpi.de/akita/i/python3-base:0.2.5
+FROM ghcr.io/timeeval/python3-base:0.3.0
 
 LABEL maintainer="phillip.wenig@hpi.de"
+LABEL org.opencontainers.image.licenses=MIT
 
 ENV ALGORITHM_MAIN="/app/algorithm.py"
 
@@ -8,5 +9,4 @@ ENV ALGORITHM_MAIN="/app/algorithm.py"
 COPY requirements.txt /app/
 RUN pip install -r /app/requirements.txt
 
-COPY kmeans /app/kmeans
-COPY algorithm.py /app/
+COPY . /app/kmeans
