--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -207,19 +207,11 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Check manifest available in container
-        uses: addnab/docker-run-action@v3
-        with:
-          image: "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest"
-          options: -e LOCAL_UID=1000 -e LOCAL_GID=1000
-          run: manifest
+        run: docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" manifest
 
       - name: Test training call
-        uses: addnab/docker-run-action@v3
-        with:
-          image: "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest"
-          options: -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${${{ matrix.algorithm_name }}_dataset_name}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw"
-          run: |
-            execute-algorithm '{
+        run: |
+          docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${${{ matrix.algorithm_name }}_dataset_name}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{
               "dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv",
               "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl",
               "executionType": "train",
@@ -227,12 +219,8 @@ jobs:
             }'
 
       - name: Test execution call
-        uses: addnab/docker-run-action@v3
-        with:
-          image: "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest"
-          options: -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${${{ matrix.algorithm_name }}_dataset_name}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw"
-          run: |
-            execute-algorithm '{
+        run: |
+          docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${${{ matrix.algorithm_name }}_dataset_name}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw" "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{
               "dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv",
               "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl",
               "executionType": "execute",
