--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -164,9 +164,11 @@ jobs:
       - name: Validate manifest
         run: python validate_manifest.py --path ${{ matrix.algorithm_name }}/manifest.json
       - name: Determine correct test dataset
+        id: dataset
         run: |
           dataset_name="$(python .ci/get_dataset_name.py ${{ matrix.algorithm_name }})"
-          echo "${{ matrix.algorithm_name }}_dataset_name=$dataset_name" >> tee "$GITHUB_OUTPUT"
+          echo "dataset_name=$dataset_name" >> "$GITHUB_OUTPUT"
+          echo "$dataset_name"
 
       - name: Compute (and check) version
         id: version
@@ -211,11 +213,11 @@ jobs:
 
       - name: Test training call
         run: |
-          docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${${{ matrix.algorithm_name }}_dataset_name}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw" "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{"dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv", "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl", "executionType": "train", "customParameters": {"epochs": 1}}'
+          docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${{ steps.dataset.outputs.dataset_name}}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw" "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{"dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv", "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl", "executionType": "train", "customParameters": {"epochs": 1}}'
 
       - name: Test execution call
         run: |
-          docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${${{ matrix.algorithm_name }}_dataset_name}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw" "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{"dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv", "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl", "executionType": "execute", "customParameters": {"epochs": 1}}'
+          docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${{ steps.dataset.outputs.dataset_name}}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw" "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{"dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv", "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl", "executionType": "execute", "customParameters": {"epochs": 1}}'
 
       - name: Validate output
         run: |
