--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -208,9 +208,13 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Check manifest available in container
+      - name: Check if manifest is in the container
         run: docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" manifest
 
+      - name: Fix permissions of result folder
+        run: |
+          mkdir -p results
+          chmod 777 results
       - name: Test training call
         run: |
           docker run --rm -e LOCAL_UID=1000 -e LOCAL_GID=1000 -v "${{ steps.dataset.outputs.dataset_name}}:/data/dataset.csv:ro" -v "$(pwd)/results:/results:rw" "ghcr.io/timeeval/${{ matrix.algorithm_name }}:latest" execute-algorithm '{"dataInput": "/data/dataset.csv", "dataOutput": "/results/scores.csv", "modelInput": "/results/model.pkl", "modelOutput": "/results/model.pkl", "executionType": "train", "customParameters": {"epochs": 1}}'
